--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -9,7 +9,7 @@
  Release: Working copy
  Locale: fr, French
  Exported by: ChilliBits
- Exported at: Fri, 04 Mar 2022 13:10:23 +0000
+ Exported at: Thu, 05 May 2022 11:56:33 +0100
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="ok">OK</string>
@@ -30,7 +30,7 @@
     <string name="share">Recommander</string>
     <string name="share_m">Recommander Color Converter à vos amis!</string>
     <string name="recommend_string">Color Converter: Convertir les couleurs, déterminer des couleurs des images et bien plus encore! Un outil efficace pour les programmeurs et les concepteurs. Télécharger de Google Play: https://play.google.com/store/apps/details?id=com.mrgames13.jimdo.colorconverter</string>
-    <string name="press_color_to_apply">Appuyez sur la couleur pour appliquer</string>
+    <string name="press_color_to_apply">Sélectionnez la couleur</string>
     <string name="rate">Évaluer</string>
     <string name="name">Prénom</string>
     <string name="argb_code">Code ARGB</string>
@@ -55,7 +55,7 @@
     <string name="install_app_download">Installez cette application pour profiter de toutes les fonctionnalités et des fonctionnalités que nous ne pouvons pas prendre en charge dans la version de l\'application instantanée.</string>
     <string name="approve_permissions">La fonctionnalité a besoin des autorisations pour fonctionner.</string>
     <string name="pix_bottom_message_without_video">Glissez les images en haut pour entrer la galerie</string>
-    <string name="speak_color">Parler couleur</string>
+    <string name="speak_color">Couleur via audio</string>
     <string name="language_not_available">Langue n\'est pas disponible</string>
     <string name="initialization_failed">Initialisation échouée</string>
     <string name="audio_muted">Augmentez le volume, s\'il vous plaît</string>
